// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 0 types 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
/>
`;

exports[`render 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    foo
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    bar
  </Text>
</View>
`;

exports[`render single type 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        Object {
          "flex": 1,
        },
      ]
    }
  >
    foo
  </Text>
</View>
`;
